fixed css bug - form error message now correctly aligned

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -231,7 +231,7 @@ input, textarea, select
   top: 1em
 
 #form-error-box
-  margin: 0px 200px 0px 176px
+  margin: 0px 12em
   padding: 6px
   color: $error-color
 
